[metadata]
name = manna
version = 0.0.1
description = A video management project
long_description = file: README.txt
keywords=videos, web  # Optional
license = BSD 3-Clause License
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
packages = manna
include_package_data = True
install_requires =
    importlib-metadata; python_version < "3.8"
    Flask  
    Flask-Login  
    Flask-Mail  
    Flask-SQLAlchemy  
    Flask-Bootstrap 
    Flask-Principal 
    Flask-WTF 
    Flask-Caching
    gunicorn 
    email-validator 
    python-dateutil
    cryptography  
    PyVimeo  
    requests  
    oauthlib  
    pyOpenSSL
    watchdog
    ffmpeg-python
scripts = serve

